2001-01-03	Joel Sherrill <joel@OARcorp.com>

	* clockdrv_shell.c: Fixed syntax error in fast idle support.

2001-01-03	Joel Sherrill <joel@OARcorp.com>

	* clockdrv_shell.c: Added fast idle mode which is enabled by defining
	CLOCK_DRIVER_USE_FAST_IDLE.
	* console-polled.c: Added console_initialize_hardware() hook.

2000-12-01	Joel Sherrill <joel@OARcorp.com>

	* console-polled.c: Remove warnings.

2000-11-13	Joel Sherrill <joel@OARcorp.com>

	* clock_driver_stub.c: This is a stub of a clock driver that
	is sufficient for linking the ticker application.  Some
	simulators do not have a soruce for a clock tick.  Also
	this can be used while constructing a BSP so everything links.

2000-11-01	Joel Sherrill <joel@OARcorp.com>

	* bsplibc.c: assoc.h, error.h, libio_.h, libio.h, and
	libcsupport.h moved from libc to lib/include/rtems and
	now must be referenced as <rtems/XXX.h>.   Header file order
	was cleaned up while doing this.

2000-10-30	Joel Sherrill <joel@OARcorp.com>

	* POSIX include files merged into newlib.  This resulted in
	some definitions moving to other files and thus some secondary
	effects in RTEMS source code.
	* sbrk.c: Corrected prototype to match newlib.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.