@@ -1,3 +1,9 @@
+2001-01-09	Joel Sherrill <joel@OARcorp.com>
+
+	* clockdrv_shell.c (CLOCK_DRIVER_ISRS_PER_TICK): Add support for
+	multiple ISRs per clock tick.  Testing per hacking on mips/jmr3904
+	clock driver.
+
 2001-01-03	Joel Sherrill <joel@OARcorp.com>
 
 	* clockdrv_shell.c: Fixed syntax error in fast idle support.
